commit clicky tracking,  some basic js improvements

--- a/resistor.html
+++ b/resistor.html
@@ -51,7 +51,7 @@
             <div class='col-xs-12'>
               <button id='band-mode' type="button" class="btn btn-sm btn-default" data-mode='4band' >Mode: 4 Band</button>    
               <button id='real-value' type='button' class='btn btn-sm btn-default' style='display:none'></button>  
-              <span class='btn-sm pull-right' id='series'><span>Series:</span> E24</span>  
+              <span class='btn-sm pull-right' id='series'><span>Series:</span> E24</span> 
               <input type="text" class="form-control input-superlg" id='resistor-value' value='4.7k&#937;' spellcheck="false">      
               <input type="hidden" id='mode-store' value='4band'>   
             </div>
@@ -203,5 +203,20 @@
         </ul>
       </div>
     </div>
+
+    <!-- Clicky Tracking -->
+    <!-- <a title="Web Statistics" href="http://clicky.com/100982976"><img alt="Web Statistics" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a> -->
+    <script type="text/javascript">
+    var clicky_site_ids = clicky_site_ids || [];
+    clicky_site_ids.push(100982976);
+    (function() {
+      var s = document.createElement('script');
+      s.type = 'text/javascript';
+      s.async = true;
+      s.src = '//static.getclicky.com/js';
+      ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
+    })();
+    </script>
+    <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100982976ns.gif" /></p></noscript>
   </body>
 </html>
